@@ -209,6 +209,7 @@ body#ext-setup-mod-index-php,
 body#ext-tsconfig-help-mod1-index-php,
 body#ext-lowlevel-dbint-index-php,
 body#ext-lowlevel-config-index-php,
+body#ext-indexed-search-mod-index-php,
 body#ext-cms-layout-db-new-content-el-php {
 	padding: 0;
 	margin: 0;
